# prospere

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: optim-chat-guide.en.md  optim-chat-guide.zh.md
scripts/: install.ps1  install.sh
skills/: data-cleaner.md  data-cleaner.zh-Hans.md  data-cleaner.zh-Hant.md
src/prospere/ai/: assistant.py
src/prospere/ai/prompts/: loader.py
src/prospere/ai/prompts/schemas/: classify_accounts.yaml  classify_categories.yaml  life_stage_modeling.yaml  parse_optim_intent.yaml  payroll_tax.yaml  tax_rules.yaml
src/prospere/cli/: bootstrap.py  bootstrap_pages.py  chat.py  i18n.py  main.py  menu.py  optim_chat.py  optimize.py  process.py  simulate.py  updater.py  utils.py
src/prospere/core/: constants.py  models.py  settings.py  workspace.py
src/prospere/ingestion/: cleaner.py  engine.py  validation.py  writer.py
src/prospere/optimization/: __init__.py  chat.py  engine.py  models.py
src/prospere/simulation/: analyzer.py  config.py  engine.py  exporter.py  metrics.py  models.py  recommendations.py  scenario.py  scenario_builder.py
tests/ai/: test_assistant.py  test_prompts.py
tests/cli/: test_chat_logic.py  test_simulate.py  test_updater.py  test_utils.py
tests/core/: test_architecture.py  test_models.py  test_workspace.py
tests/ingestion/: test_cleaner.py  test_ingestion_engine.py  test_writer.py
tests/integration/: test_end_to_end.py
tests/mock_data/: baseline_moneywiz.csv  category_config.json
tests/optimization/: test_engine.py
tests/simulation/: test_analyzer.py  test_config.py  test_engine.py  test_exporter.py  test_scenario.py  test_scenario_builder.py
(+19 files in other folders)
